--- a/index.jade
+++ b/index.jade
@@ -122,6 +122,7 @@ html
                                 .course__box--footer
                                     input.course__checkbox#checkbox6(type="checkbox" name="finished" value="finished")
                                     label(for="checkbox6") Посмотрел
+                        .finished Задание выполнено!
 
             .empty
         footer.footer
